switch build system back to manual.pdf and manual.html
(issue #187)

--- a/tex/manual.css
+++ b/tex/manual.css
@@ -2,7 +2,17 @@ body  { background-color:#FFFFFF; margin-left: 20%; margin-right: 20%;
         font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
         font-size: 14px; }
 table { background-color:#F0F0F0; }
-h1    { font-size:16pt; font-style:italic; font-weight:bold; font-family:arial,helvetica; 
+#header h1 {
+        font-size:28pt; 
+        font-weight:bold;
+        font-style:none;
+        font-family:arial,helvetica; 
+        text-align: center;
+        border-style: none;
+        margin-left: 0px;
+        margin-bottom: 3ex;
+        }
+h1   { font-size:16pt; font-style:italic; font-weight:bold; font-family:arial,helvetica; 
         border-bottom-width:1px; border-bottom-style:solid; padding-top:5mm; margin-top:1cm; 
         margin-left: -2.5em;}
 h2    { font-size:14pt; font-style:italic; font-weight:bold; font-family:arial,helvetica; 
