--- a/java/jflex/ucd_generator/UnicodeProperties.java.vm
+++ b/java/jflex/ucd_generator/UnicodeProperties.java.vm
@@ -27,10 +27,10 @@ public class UnicodeProperties {
 
   /** List of supported unicode versions. */
   public static final String UNICODE_VERSIONS =
---- List of Unicode versions
+      "$unicodeVersionsAsString";
 
   private static final String DEFAULT_UNICODE_VERSION =
---- Most recent Unicode version
+      "$latestUnicodeVersion";
 
   private static final Pattern WORD_SEP_PATTERN = Pattern.compile("[-_\\s()]");
 
