Add Google copyright since I'm doing substancial changes

--- a/java/jflex/ucd_generator/UnicodeProperties.java.vm
+++ b/java/jflex/ucd_generator/UnicodeProperties.java.vm
@@ -1,6 +1,7 @@
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * JFlex Unicode Properties                                                *
  * Copyright (c) 2008-2013  Steve Rowe <sarowe@gmail.com>                  *
+ * Copyright (c) 2018       Google, LLC.                                   *
  * All rights reserved.                                                    *
  *                                                                         *
  * License: BSD                                                            *
