--- a/java/jflex/ucd_generator/UnicodeProperties.java.vm
+++ b/java/jflex/ucd_generator/UnicodeProperties.java.vm
@@ -26,7 +26,7 @@ $classComment
 #end
 public class UnicodeProperties {
 
-  /** List of supported unicode versions. */
+  /** Human-readable list of all supported Unicode versions. */
   public static final String UNICODE_VERSIONS =
       "$versionsAsString";
 
@@ -44,8 +44,7 @@ public class UnicodeProperties {
    * Unpacks the Unicode data corresponding to the default Unicode version: "{@value
    * #DEFAULT_UNICODE_VERSION}".
    *
-   * @throws UnicodeProperties.UnsupportedUnicodeVersionException if the default version is not
-   *     supported.
+   * @throws UnsupportedUnicodeVersionException if the default version is not supported.
    */
   public UnicodeProperties() throws UnsupportedUnicodeVersionException {
     init(DEFAULT_UNICODE_VERSION);
@@ -55,8 +54,7 @@ public class UnicodeProperties {
    * Unpacks the Unicode data corresponding to the given version.
    *
    * @param version The Unicode version for which to unpack data
-   * @throws UnicodeProperties.UnsupportedUnicodeVersionException if the given version is not
-   *     supported.
+   * @throws UnsupportedUnicodeVersionException if the given version is not supported.
    */
   public UnicodeProperties(String version) throws UnsupportedUnicodeVersionException {
     init(version);
