--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -1,3 +1,4 @@
+#set($String = "USE_FOR_FORMATTING")
 /*
  * Copyright (C) 1998-2019  Gerwin Klein <lsf@jflex.de>
  * Copyright (C) 2008-2019  Steve Rowe <sarowe@gmail.com>
@@ -32,5 +33,5 @@ class $className {
   // Only holds constants.
   private $className() {}
 
-  public static final int maximumCodePoint = 0xffff;
+  public static final int maximumCodePoint = 0x$String.format("%x", $maxCodePoint);
 }
