--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -1,6 +1,8 @@
+#set($String = "USE_FOR_FORMATTING")
 /*
+ * Copyright (C) 1998-2019  Gerwin Klein <lsf@jflex.de>
  * Copyright (C) 2008-2019  Steve Rowe <sarowe@gmail.com>
- * Copyright (C) 2018-2019 Google, LLC.
+ * Copyright (C) 2018-2019  Google, LLC.
  *
  * License: https://opensource.org/licenses/BSD-3-Clause
  *
@@ -28,4 +30,8 @@ package $packageName;
 
 class $className {
 
+  // Only holds constants.
+  private $className() {}
+
+  public static final int maximumCodePoint = 0x$String.format("%x", $maxCodePoint);
 }
