--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -40,5 +40,5 @@ class $className {
   public static final int caselessMatchPartitionSize = $maxCaselessMatchPartitionSize;
   // TODO Change to array of string?
   public static final String caselessMatchPartitions =
-      $caselessMatchPartitions;
+      "$caselessMatchPartitions";
 }
