UCD generator: caselessMatches in Unicode_X_Y (#586)
* Remove Bazel generation of the scanners in the maven plugin

* Emit `caselessMatchPartitionSize` & `caselessMatches` in Unicode_X_Y.java

* Generated file follows google-java-format
  Update to google-java-format-1.7

* Update golden file for UnicodeVersionEmitterTest

--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -33,5 +33,12 @@ class $className {
   // Only holds constants.
   private $className() {}
 
+  /** Highest Unicode code point. */
   public static final int maximumCodePoint = 0x$String.format("%x", $maxCodePoint);
+
+  /** Maximum caseless partition size. */
+  public static final int caselessMatchPartitionSize = $maxCaselessMatchPartitionSize;
+  // TODO Change to array of string?
+  public static final String caselessMatchPartitions =
+      "$caselessMatchPartitions";
 }
