Generate property values
eg
```
  public static final String[] propertyValues = {
    "assigned", "generalcategory=generalcategory"
  };
```

--- a/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
+++ b/java/jflex/ucd_generator/emitter/unicode_version/Unicode_x_y.java.vm
@@ -36,6 +36,10 @@ class $className {
   /** Highest Unicode code point. */
   public static final int maximumCodePoint = 0x$String.format("%x", $maxCodePoint);
 
+  public static final String[] propertyValues = {
+    "$propertyValues"
+  };
+
   /** Maximum caseless partition size. */
   public static final int caselessMatchPartitionSize = $maxCaselessMatchPartitionSize;
   // TODO Change to array of string?
