--- a/java/jflex/migration/BUILD.vm
+++ b/java/jflex/migration/BUILD.vm
@@ -19,6 +19,7 @@ java_test(
         ":gen_${testName}_scanner",
     ],
     deps = [
+        "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
