--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -2,13 +2,18 @@
 
 package $javaPackage;
 
+import static com.google.common.truth.Truth.assertWithMessage;
+
+import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableList;
 import com.google.common.io.Files;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.PrintStream;
 import java.nio.charset.Charset;
 import java.util.List;
 import javax.annotation.Generated;
+import jflex.testing.diff.DiffOutputStream;
 import jflex.testing.testsuite.golden.GoldenInOutFilePair;
 import org.junit.Test;
 
@@ -41,8 +46,18 @@ public class $testClassName {
 #end
 
     for (GoldenInOutFilePair golden : goldenFiles) {
+      // in-memory output comparison
+      DiffOutputStream output =
+          new DiffOutputStream(Files.newReader(golden.outputFile, Charsets.UTF_8));
+      System.setOut(new PrintStream(output));
+
       // Scanner for $flexGrammar
       $scannerClassName scanner = createScanner(golden.inputFile);
+      scanner.yylex();
+
+      assertWithMessage("All expected output has been printed on System.out")
+          .that(output.isCompleted())
+          .isTrue();
     }
   }
 
