--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -14,6 +14,7 @@ import java.nio.charset.Charset;
 import java.util.List;
 import javax.annotation.Generated;
 import jflex.testing.diff.DiffOutputStream;
+import jflex.testing.testsuite.golden.AbstractGoldenTest;
 import jflex.testing.testsuite.golden.GoldenInOutFilePair;
 import org.junit.Test;
 
@@ -28,7 +29,7 @@ import org.junit.Test;
  */
 // TODO Migrate this test to proper unit tests.
 @Generated("jflex.migration.Migrator")
-public class $testClassName {
+public class $testClassName extends AbstractGoldenTest {
 
   @Test
   public void goldenTest() throws Exception {
@@ -46,18 +47,11 @@ public class $testClassName {
 #end
 
     for (GoldenInOutFilePair golden : goldenFiles) {
-      // in-memory output comparison
-      DiffOutputStream output =
-          new DiffOutputStream(Files.newReader(golden.outputFile, Charsets.UTF_8));
-      System.setOut(new PrintStream(output));
+      compareSystemOutWith(golden);
 
       // Scanner for $flexGrammar
       $scannerClassName scanner = createScanner(golden.inputFile);
       scanner.yylex();
-
-      assertWithMessage("All expected output has been printed on System.out")
-          .that(output.isCompleted())
-          .isTrue();
     }
   }
 
