--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -3,8 +3,11 @@
 package $javaPackage;
 
 import com.google.common.io.Files;
+import com.google.common.io.CharSource;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.Reader;
 import java.nio.charset.Charset;
 import javax.annotation.Generated;
 import jflex.testing.testsuite.golden.AbstractGoldenTest;
@@ -42,7 +45,23 @@ public class $testClassName extends AbstractGoldenTest {
   }
 #end
 
+#if ( $goldens.size() == 0 )
+  /** Tests that the scanner was successfully generated and can be instantiated. */
+  @Test
+  public void canInstantiateScanner() throws Exception {
+    $scannerClassName scanner = createScanner("");
+  }
+#end
+
   private static $scannerClassName createScanner(File inputFile) throws FileNotFoundException {
-    return new $scannerClassName(Files.newReader(inputFile, Charset.forName("UTF-8")));
+    return createScanner(Files.newReader(inputFile, Charset.forName("UTF-8")));
+  }
+
+  private static $scannerClassName createScanner(String content) throws IOException {
+    return createScanner(CharSource.wrap(content).openStream());
+  }
+
+  private static $scannerClassName createScanner(Reader reader) {
+    return new $scannerClassName(reader);
   }
 }
