--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -2,23 +2,19 @@
 
 package $javaPackage;
 
-import static com.google.common.truth.Truth.assertWithMessage;
-
-import com.google.common.base.Charsets;
-import com.google.common.collect.ImmutableList;
 import com.google.common.io.Files;
 import java.io.File;
 import java.io.FileNotFoundException;
-import java.io.PrintStream;
 import java.nio.charset.Charset;
-import java.util.List;
 import javax.annotation.Generated;
-import jflex.testing.diff.DiffOutputStream;
+import jflex.testing.testsuite.golden.AbstractGoldenTest;
 import jflex.testing.testsuite.golden.GoldenInOutFilePair;
 import org.junit.Test;
 
 /**
- * $testDescription
+ * Tests scanner generated from {@code $flexGrammar.Name}.
+ *
+ * <p>$testDescription
  *
  * <p>Note: This test was generated from {@code jflex-testsuite-maven-plugin} test cases. The test
  * relies on golden files for testing, expecting the scanner to output logs on the {@code
@@ -28,42 +24,25 @@ import org.junit.Test;
  */
 // TODO Migrate this test to proper unit tests.
 @Generated("jflex.migration.Migrator")
-public class $testClassName {
+public class $testClassName extends AbstractGoldenTest {
 
-  @Test
-  public void goldenTest() throws Exception {
+  private File testRuntimeDir = new File("javatests/$javaPackageDir");
 
-    // The .input / .output Golden files
-    File testRuntimeDir = new File("javatests/$javaPackageDir");
-    List<GoldenInOutFilePair> goldenFiles =
-        ImmutableList.of(
 #foreach ( $golden in $goldens )
-            new GoldenInOutFilePair(
-                "$golden.Name",
-                new File(testRuntimeDir, "$golden.InputFileName"),
-                new File(testRuntimeDir, "$golden.OutputFileName"))
-#if( $foreach.hasNext ),#end
-        );
+  @Test
+  public void goldenTest$velocityCount() throws Exception {
+    GoldenInOutFilePair golden =
+        new GoldenInOutFilePair(
+            new File(testRuntimeDir, "$golden.InputFileName"),
+            new File(testRuntimeDir, "$golden.OutputFileName"));
+    compareSystemOutWith(golden);
+
+    $scannerClassName scanner = createScanner(golden.inputFile);
+    scanner.yylex();
+  }
 #end
 
-    for (GoldenInOutFilePair golden : goldenFiles) {
-      // in-memory output comparison
-      DiffOutputStream output =
-          new DiffOutputStream(Files.newReader(golden.outputFile, Charsets.UTF_8));
-      System.setOut(new PrintStream(output));
-
-      // Scanner for $flexGrammar
-      $scannerClassName scanner = createScanner(golden.inputFile);
-      scanner.yylex();
-
-      assertWithMessage("All expected output has been printed on System.out")
-          .that(output.isCompleted())
-          .isTrue();
-    }
-  }
-
   private static $scannerClassName createScanner(File inputFile) throws FileNotFoundException {
-    return new $scannerClassName(
-        Files.newReader(inputFile, Charset.forName("UTF-8")));
+    return new $scannerClassName(Files.newReader(inputFile, Charset.forName("UTF-8")));
   }
 }
