--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -2,13 +2,15 @@
 
 package $javaPackage;
 
+import com.google.common.io.CharSource;
 import com.google.common.io.Files;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
+import java.io.Reader;
+import java.nio.charset.Charset;
 import javax.annotation.Generated;
 import jflex.testing.testsuite.golden.AbstractGoldenTest;
-import jflex.testing.testsuite.golden.GoldenInOutFilePair;
 import org.junit.Test;
 
 /**
@@ -26,7 +28,9 @@ import org.junit.Test;
 @Generated("jflex.migration.Migrator")
 public class $testClassName extends AbstractGoldenTest {
 
+#if ( $goldens.size() > 0 )
   private File testRuntimeDir = new File("javatests/$javaPackageDir");
+#end
 
 #foreach ( $golden in $goldens )
   @Test
@@ -46,7 +50,7 @@ public class $testClassName extends AbstractGoldenTest {
   /** Tests that the scanner was successfully generated and can be instantiated. */
   @Test
   public void canInstantiateScanner() throws Exception {
-    $scannerClassName scanner = createScanner("");
+    createScanner("");
   }
 #end
 
