--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -2,13 +2,15 @@
 
 package $javaPackage;
 
+import com.google.common.io.CharSource;
 import com.google.common.io.Files;
 import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.Reader;
 import java.nio.charset.Charset;
 import javax.annotation.Generated;
 import jflex.testing.testsuite.golden.AbstractGoldenTest;
-import jflex.testing.testsuite.golden.GoldenInOutFilePair;
 import org.junit.Test;
 
 /**
@@ -26,7 +28,9 @@ import org.junit.Test;
 @Generated("jflex.migration.Migrator")
 public class $testClassName extends AbstractGoldenTest {
 
+#if ( $goldens.size() > 0 )
   private File testRuntimeDir = new File("javatests/$javaPackageDir");
+#end
 
 #foreach ( $golden in $goldens )
   @Test
@@ -42,7 +46,23 @@ public class $testClassName extends AbstractGoldenTest {
   }
 #end
 
+#if ( $goldens.size() == 0 )
+  /** Tests that the scanner was successfully generated and can be instantiated. */
+  @Test
+  public void canInstantiateScanner() throws Exception {
+    createScanner("");
+  }
+#end
+
   private static $scannerClassName createScanner(File inputFile) throws FileNotFoundException {
-    return new $scannerClassName(Files.newReader(inputFile, Charset.forName("UTF-8")));
+    return createScanner(Files.newReader(inputFile, Charset.forName("UTF-8")));
+  }
+
+  private static $scannerClassName createScanner(String content) throws IOException {
+    return createScanner(CharSource.wrap(content).openStream());
+  }
+
+  private static $scannerClassName createScanner(Reader reader) {
+    return new $scannerClassName(reader);
   }
 }
