--- a/java/jflex/migration/BUILD.vm
+++ b/java/jflex/migration/BUILD.vm
@@ -39,6 +39,7 @@ java_test(
         ":${testName}_scanner",
         "//java/jflex/testing/diff",
         "//java/jflex/testing/testsuite/golden",
+        "//java/jflex/util/scanner:scanner_factory",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
