--- a/java/jflex/migration/TestCase.java.vm
+++ b/java/jflex/migration/TestCase.java.vm
@@ -11,6 +11,7 @@ import java.io.Reader;
 import java.nio.charset.Charset;
 import jflex.testing.testsuite.golden.AbstractGoldenTest;
 import jflex.testing.testsuite.golden.GoldenInOutFilePair;
+import jflex.util.scanner.ScannerFactory;
 import org.junit.Test;
 
 /**
@@ -23,7 +24,10 @@ import org.junit.Test;
  * //javatest/jflex/testcase</a>.
  */
 // TODO Migrate this test to proper unit tests.
-public class $testClassName extends AbstractGoldenTest<$scannerClassName> {
+public class $testClassName extends AbstractGoldenTest {
+
+ /** Creates a scanner conforming to the {@code $flexGrammar.Name} specification. */
+ private final ScannerFactory<$scannerClassName> scannerFactory = ScannerFactory.of($scannerClassName::new);
 
 #if ( $goldens.size() > 0 )
   private File testRuntimeDir = new File("javatests/$javaPackageDir");
@@ -38,7 +42,7 @@ public class $testClassName extends AbstractGoldenTest<$scannerClassName> {
             new File(testRuntimeDir, "$golden.OutputFileName"));
     compareSystemOutWith(golden);
 
-    $scannerClassName scanner = createScanner(golden.inputFile);
+    $scannerClassName scanner = scannerFactory.createScannerForFile(golden.inputFile);
     scanner.yylex();
   }
 #end
@@ -47,13 +51,7 @@ public class $testClassName extends AbstractGoldenTest<$scannerClassName> {
   /** Tests that the scanner was successfully generated and can be instantiated. */
   @Test
   public void canInstantiateScanner() throws Exception {
-    createScanner("");
+    scannerFactory.createScannerWithContent("");
   }
 #end
-
- /** Creates a scanner conforming to the {@code $flexGrammar.Name} specification. */
- @Override
- protected $scannerClassName createScanner(Reader reader) {
-   return new $scannerClassName(reader);
- }
 }
